force-app/main/default/objects/Contact_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>First_Year_Enrolled__c</fullName>
        <label>First Year Enrolled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1965</fullName>
                </value>
                <value>
                    <fullName>1966</fullName>
                </value>
                <value>
                    <fullName>1967</fullName>
                </value>
                <value>
                    <fullName>1968</fullName>
                </value>
                <value>
                    <fullName>1969</fullName>
                </value>
                <value>
                    <fullName>1970</fullName>
                </value>
                <value>
                    <fullName>1971</fullName>
                </value>
                <value>
                    <fullName>1972</fullName>
                </value>
                <value>
                    <fullName>1973</fullName>
                </value>
                <value>
                    <fullName>1974</fullName>
                </value>
                <value>
                    <fullName>1975</fullName>
                </value>
                <value>
                    <fullName>1976</fullName>
                </value>
                <value>
                    <fullName>1977</fullName>
                </value>
                <value>
                    <fullName>1978</fullName>
                </value>
                <value>
                    <fullName>1979</fullName>
                </value>
                <value>
                    <fullName>1980</fullName>
                </value>
                <value>
                    <fullName>1981</fullName>
                </value>
                <value>
                    <fullName>1982</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Former_Supervisor_Details__c</fullName>
        <description>Former Supervisor Details for research</description>
        <label>Former Supervisor Details</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Former_Thesis_Topic__c</fullName>
        <description>Former Thesis Topic for research</description>
        <label>Former Thesis Topic</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_source__c</fullName>
        <description>Funding source</description>
        <label>Funding source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTE_Risk_Rating__c</fullName>
        <description>Display GTE Risk Rating From Country Object</description>
        <formula>TEXT(Qualification_Country__r.GTE_Risk_Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTE Risk Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <description>This field captures graduation date</description>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Honorary_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for honorary degrees.</description>
        <label>Honorary Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution_Code__c</fullName>
        <description>This is referencing the Institution_Code__c field of the Callista_Institutions__c Custom Setting</description>
        <label>Institution Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <description>This is referencing the Institution_Name__c field of the Callista_Institutions__c Custom Setting</description>
        <label>Awarding Body/Institution Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution (DELETE - DO NOT USE)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Contact_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instruction_in_English__c</fullName>
        <defaultValue>false</defaultValue>
        <label>English Language of Instruction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_in_English__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the publication written in English</description>
        <label>Is the publication written in English</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language of book</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8998</fullName>
                    <label>ABORIGINAL ENGLISH, SO DESCRIBED</label>
                </value>
                <value>
                    <fullName>6513</fullName>
                    <label>ACEHNESE</label>
                </value>
                <value>
                    <fullName>9201</fullName>
                    <label>ACHOLI</label>
                </value>
                <value>
                    <fullName>8901</fullName>
                    <label>ADNYMATHANHA</label>
                </value>
                <value>
                    <fullName>9299</fullName>
                    <label>AFRICAN LANGUAGES, NEC</label>
                </value>
                <value>
                    <fullName>9200</fullName>
                    <label>AFRICAN LANGUAGES, NFD</label>
                </value>
                <value>
                    <fullName>1403</fullName>
                    <label>AFRIKAANS</label>
                </value>
                <value>
                    <fullName>9203</fullName>
                    <label>AKAN</label>
                </value>
                <value>
                    <fullName>8121</fullName>
                    <label>ALAWA</label>
                </value>
                <value>
                    <fullName>3901</fullName>
                    <label>ALBANIAN</label>
                </value>
                <value>
                    <fullName>8315</fullName>
                    <label>ALNGITH</label>
                </value>
                <value>
                    <fullName>8603</fullName>
                    <label>ALYAWARR</label>
                </value>
                <value>
                    <fullName>9101</fullName>
                    <label>AMERICAN LANGUAGES</label>
                </value>
                <value>
                    <fullName>9214</fullName>
                    <label>AMHARIC</label>
                </value>
                <value>
                    <fullName>8156</fullName>
                    <label>AMURDAK</label>
                </value>
                <value>
                    <fullName>8101</fullName>
                    <label>ANINDILYAKWA</label>
                </value>
                <value>
                    <fullName>8619</fullName>
                    <label>ANMATYERR, NEC</label>
                </value>
                <value>
                    <fullName>8610</fullName>
                    <label>ANMATYERR, NFD</label>
                </value>
                <value>
                    <fullName>8607</fullName>
                    <label>ANTEKERREPENH</label>
                </value>
                <value>
                    <fullName>8703</fullName>
                    <label>ANTIKARINYA</label>
                </value>
                <value>
                    <fullName>9241</fullName>
                    <label>ANUAK</label>
                </value>
                <value>
                    <fullName>8902</fullName>
                    <label>ARABANA</label>
                </value>
                <value>
                    <fullName>4202</fullName>
                    <label>ARABIC</label>
                </value>
                <value>
                    <fullName>8699</fullName>
                    <label>ARANDIC, NEC</label>
                </value>
                <value>
                    <fullName>8600</fullName>
                    <label>ARANDIC, NFD</label>
                </value>
                <value>
                    <fullName>4901</fullName>
                    <label>ARMENIAN</label>
                </value>
                <value>
                    <fullName>8199</fullName>
                    <label>ARNHEM LAND AND DALY RIVER REGION LANGUAGES, NEC</label>
                </value>
                <value>
                    <fullName>8100</fullName>
                    <label>ARNHEM LAND AND DALY RIVER REGION LANGUAGES, NFD</label>
                </value>
                <value>
                    <fullName>3903</fullName>
                    <label>AROMUNIAN (MACEDO-ROMANIAN)</label>
                </value>
                <value>
                    <fullName>8629</fullName>
                    <label>ARRERNTE, NEC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Year_Enrolled__c</fullName>
        <inlineHelpText>This year if continuing</inlineHelpText>
        <label>Last Year Enrolled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1965</fullName>
                </value>
                <value>
                    <fullName>1966</fullName>
                </value>
                <value>
                    <fullName>1967</fullName>
                </value>
                <value>
                    <fullName>1968</fullName>
                </value>
                <value>
                    <fullName>1969</fullName>
                </value>
                <value>
                    <fullName>1970</fullName>
                </value>
                <value>
                    <fullName>1971</fullName>
                </value>
                <value>
                    <fullName>1972</fullName>
                </value>
                <value>
                    <fullName>1973</fullName>
                </value>
                <value>
                    <fullName>1974</fullName>
                </value>
                <value>
                    <fullName>1975</fullName>
                </value>
                <value>
                    <fullName>1976</fullName>
                </value>
                <value>
                    <fullName>1977</fullName>
                </value>
                <value>
                    <fullName>1978</fullName>
                </value>
                <value>
                    <fullName>1979</fullName>
                </value>
                <value>
                    <fullName>1980</fullName>
                </value>
                <value>
                    <fullName>1981</fullName>
                </value>
                <value>
                    <fullName>1982</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listening__c</fullName>
        <description>Stores Listening score.</description>
        <inlineHelpText>Stores Listening score.</inlineHelpText>
        <label>Listening</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Venue__c</fullName>
        <description>Location/Venue for performance</description>
        <label>Location/Venue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major1__c</fullName>
        <description>Title/name of the primary Major</description>
        <label>Major 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major2__c</fullName>
        <description>Title/name of the secondary Major.</description>
        <label>Major 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor1__c</fullName>
        <description>Title/name of the primary Minor</description>
        <label>Minor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor2__c</fullName>
        <description>Title/name of the secondary Minor</description>
        <label>Minor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monash_Equivalent_GPA__c</fullName>
        <description>This field contains the calculated Monash Equivalent GPA. Only to be used by internal Monash users - not applicants.</description>
        <label>Monash Equivalent Band</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UERT - Band 0</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 1</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 1+</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 2</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 2+</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 3</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 3+</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 4</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 4+</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 5</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 5+</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 6</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 6+</fullName>
                </value>
                <value>
                    <fullName>UERT - Band 7</fullName>
                </value>
                <value>
                    <fullName>PERT - Pass</fullName>
                </value>
                <value>
                    <fullName>PERT - High Pass</fullName>
                </value>
                <value>
                    <fullName>PERT - Credit</fullName>
                </value>
                <value>
                    <fullName>PERT - High Credit</fullName>
                </value>
                <value>
                    <fullName>PERT - Distinction</fullName>
                </value>
                <value>
                    <fullName>PERT - Distinction+</fullName>
                </value>
                <value>
                    <fullName>PERT - High Distinction</fullName>
                </value>
                <value>
                    <fullName>PERT - High Distinction+</fullName>
                </value>
                <value>
                    <fullName>English - Level A</fullName>
                </value>
                <value>
                    <fullName>English - Level B</fullName>
                </value>
                <value>
                    <fullName>English - Level C</fullName>
                </value>
                <value>
                    <fullName>English - Level D</fullName>
                </value>
                <value>
                    <fullName>English - Level E</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Year 10 and below</fullName>
                </value>
                <value>
                    <fullName>Year 11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_at_Completion__c</fullName>
        <description>Name of the person when they received the qualification, e.g. maiden name etc.</description>
        <label>Name at Completion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Book__c</fullName>
        <description>Name of Book for publication</description>
        <label>Name of Book</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Publisher_Journal_Org__c</fullName>
        <description>Name of Publisher/Journal/Org</description>
        <label>Name of Publisher/Journal/Org</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotarisedStatus__c</fullName>
        <description>Capture the status of Notary</description>
        <label>Notarised status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notarised</fullName>
                </value>
                <value>
                    <fullName>Not Notarised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Author_Performer__c</fullName>
        <description>Number of Author/Performer</description>
        <label>Number of Author/Performer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Fails__c</fullName>
        <description>Users will use this field to record number of fails</description>
        <inlineHelpText>Users will use this field to record number of fails</inlineHelpText>
        <label>Number of Fails</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obtained_Status__c</fullName>
        <label>Obtained Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MONASH-OBTAINED</fullName>
                    <label>Monash Obtained</label>
                </value>
                <value>
                    <fullName>NON-MONASH-OBTAINED</fullName>
                    <label>Non-Monash Obtained</label>
                </value>
                <value>
                    <fullName>NOT-OBTAINED</fullName>
                    <label>Not Obtained</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Evidence_Type__c</fullName>
        <description>Other Evidence Type Text</description>
        <label>Other Evidence Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Institution__c</fullName>
        <label>Other Awarding Body/Institution</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Qualification_Comments__c</fullName>
        <description>Comment section on Other Qualification Record Type</description>
        <label>Applicant Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Qualification__c</fullName>
        <label>Other Qualification</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Count__c</fullName>
        <description>Number of pages</description>
        <label>Number of pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <label>Person ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Position Held</description>
        <label>Position Held</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_of_author__c</fullName>
        <description>Position of author</description>
        <label>Position of author</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Subjects__c</fullName>
        <label>Prerequisite Subjects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Role__c</fullName>
        <description>Primary role/responsibility in production</description>
        <label>Primary Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manual flag to indicate which qualification is regarded as primary (per Contact), for Alumni purposes.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <description>Year of publication of book</description>
        <label>Year of publication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification_Code__c</fullName>
        <description>This field captures qualificaiton code</description>
        <label>Qualification Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Country_Code__c</fullName>
        <label>Qualification Country Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the country at which the qualification is obtained</description>
        <label>Qualification Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Contact Qualifications</relationshipLabel>
        <relationshipName>Contact_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Document attached to the specific qualification</description>
        <label>Qualification Document</label>
        <referenceTo>Contact_Document__c</referenceTo>
        <relationshipLabel>Contact Qualifications</relationshipLabel>
        <relationshipName>Contact_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_GPA_Calc_Method__c</fullName>
        <label>Qualification GPA Calc Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UERT Calculation</fullName>
                </value>
                <value>
                    <fullName>GPA Calculator</fullName>
                </value>
                <value>
                    <fullName>WAM calculator</fullName>
                    <label>WAM Calculator</label>
                </value>
                <value>
                    <fullName>Home Institution - No Recalculation Required</fullName>
                </value>
                <value>
                    <fullName>India Average Calculator</fullName>
                </value>
                <value>
                    <fullName>Monash College Calculator</fullName>
                </value>
                <value>
                    <fullName>MD Graduate Entry calculator</fullName>
                    <label>MD Graduate Entry Calculator</label>
                </value>
                <value>
                    <fullName>Juris Doctor calculator</fullName>
                    <label>Juris Doctor Calculator</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>BusEco for multiple qualifications</fullName>
                    <isActive>false</isActive>
                    <label>BusEco for multiple qualifications</label>
                </value>
                <value>
                    <fullName>CGPA – Home institution GPA, no recalculation required</fullName>
                    <isActive>false</isActive>
                    <label>CGPA – Home institution GPA, no recalculation required</label>
                </value>
                <value>
                    <fullName>GPA calculator - other universities - except India</fullName>
                    <isActive>false</isActive>
                    <label>GPA calculator - other universities - except India</label>
                </value>
                <value>
                    <fullName>Other universities - except India</fullName>
                    <isActive>false</isActive>
                    <label>Other universities - except India</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_GPA_Scale__c</fullName>
        <label>Qualification GPA Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_GPA__c</fullName>
        <label>Qualification GPA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualification_Grade__c</fullName>
        <description>This field captures qualificaiton grade</description>
        <label>Qualification Grade</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Mark__c</fullName>
        <description>This field captures qualification mark</description>
        <label>Qualification Mark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Name__c</fullName>
        <formula>if (ISBLANK(Qualification__r.Qualification_Name__c)
  , if (ISBLANK( Other_Qualification__c), Title__c,Other_Qualification__c)
 , HYPERLINK(&apos;/&apos;+Id, Qualification__r.Qualification_Name__c,&apos;_self&apos;))</formula>
        <label>Qualification Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <description>Qualification_Status</description>
        <label>Qualification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MU-RECORD</fullName>
                    <label>Performance Commercially Recorded</label>
                </value>
                <value>
                    <fullName>MU-CONCERT</fullName>
                    <label>Performance Recorded in Public Concert</label>
                </value>
                <value>
                    <fullName>MU-BCAST</fullName>
                    <label>Composition Broadcast</label>
                </value>
                <value>
                    <fullName>MU-PUBLISH</fullName>
                    <label>Composition Published</label>
                </value>
                <value>
                    <fullName>MU-RELEASE</fullName>
                    <label>Composition Released</label>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>IN-PRESS</fullName>
                    <label>In Press</label>
                </value>
                <value>
                    <fullName>PUBLISHED</fullName>
                    <label>Published</label>
                </value>
                <value>
                    <fullName>PROFESSION</fullName>
                    <label>Professional</label>
                </value>
                <value>
                    <fullName>INDEPENDNT</fullName>
                    <label>Independent</label>
                </value>
                <value>
                    <fullName>CR-STAT-NA</fullName>
                    <label>Not Applicable / Not Published</label>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>CONTINUING</fullName>
                    <label>Not completed but intends to complete</label>
                </value>
                <value>
                    <fullName>WANTS2TFER</fullName>
                    <label>Not completed but wishes to transfer</label>
                </value>
                <value>
                    <fullName>WITHDREWCL</fullName>
                    <label>Incomplete and will not complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Qualification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualification Lookup</label>
        <referenceTo>Qualification__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Contact_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_of_work__c</fullName>
        <description>Quality of work description</description>
        <label>Quality of work</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reading__c</fullName>
        <description>Stores reading score</description>
        <inlineHelpText>Stores reading score</inlineHelpText>
        <label>Reading</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_for_transfer__c</fullName>
        <description>Reasons for transfer for research</description>
        <label>Reasons for transfer</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referee_Name__c</fullName>
        <description>Referee Name</description>
        <label>Referee Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Count__c</fullName>
        <description>Roll up summary to determine if the record has been reference with the previous application</description>
        <label>Reference Count</label>
        <summaryForeignKey>Application_Qualification_Provided__c.Contact_Qualification__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Relationship with referee</description>
        <label>Relationship</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Institution_Name__c</fullName>
        <description>Reflects either institution name or other institution name depending on what is populated.</description>
        <formula>IF(Institution_Name__c != null, Institution_Name__c, Other_Institution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relevant Institution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Qualification_Name__c</fullName>
        <description>Reflects either other qualification name or qualification&apos;s qualification name depending on what is populated.</description>
        <formula>IF(Other_Qualification__c != null, Other_Qualification__c, Qualification__r.Qualification_Name__c)</formula>
        <label>Relevant Qualification Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Type__c</fullName>
        <label>Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>